--- a/gongbu/gongbu/Base.lproj/Main.storyboard
+++ b/gongbu/gongbu/Base.lproj/Main.storyboard
@@ -16,42 +16,55 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rLy-GR-stm">
-                                <rect key="frame" x="104" y="160" width="187" height="189"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="button_play"/>
+                            <navigationBar contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4xr-0v-Sjc">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                            </navigationBar>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y4t-S4-eww">
+                                <rect key="frame" x="87.5" y="158" width="200" height="189"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="5ga-Ui-7je"/>
+                                    <constraint firstAttribute="width" constant="200" id="wRm-pb-1eo"/>
+                                </constraints>
+                                <state key="normal" title="Button" image="button_play"/>
                                 <state key="selected" image="button_pause"/>
                                 <connections>
-                                    <action selector="touchUpPlayPauseButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="RUf-TK-bP1"/>
+                                    <action selector="touchUpPlayPauseButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IFZ-bo-GJr"/>
                                 </connections>
                             </button>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="aDW-nI-7dh">
-                                <rect key="frame" x="58" y="467" width="259" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <slider opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="SR0-hU-vQu">
+                                <rect key="frame" x="14" y="429" width="347" height="30"/>
                                 <color key="minimumTrackTintColor" systemColor="systemPinkColor"/>
                                 <connections>
-                                    <action selector="SliderValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="hcX-Md-U5m"/>
+                                    <action selector="SliderValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="yzr-No-7qO"/>
                                 </connections>
                             </slider>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4xr-0v-Sjc">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            </navigationBar>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00:00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qg8-RA-74Q">
-                                <rect key="frame" x="130" y="380" width="100" height="33"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                                <color key="textColor" systemColor="systemIndigoColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="00:00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WYB-dh-fwP">
+                                <rect key="frame" x="152" y="380" width="71" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="SR0-hU-vQu" firstAttribute="top" secondItem="WYB-dh-fwP" secondAttribute="bottom" constant="16" id="00D-qh-mlw"/>
+                            <constraint firstItem="SR0-hU-vQu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="4lo-YY-GNL"/>
+                            <constraint firstItem="y4t-S4-eww" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="5Eu-Hx-q0r"/>
+                            <constraint firstItem="SR0-hU-vQu" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7xR-X9-ra5"/>
+                            <constraint firstItem="WYB-dh-fwP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GCx-nh-Hah"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="SR0-hU-vQu" secondAttribute="trailing" constant="16" id="XKf-ct-l4y"/>
+                            <constraint firstItem="y4t-S4-eww" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hVV-Hn-QHN"/>
+                            <constraint firstItem="WYB-dh-fwP" firstAttribute="top" secondItem="y4t-S4-eww" secondAttribute="bottom" constant="20" id="kCC-og-NK6"/>
+                            <constraint firstItem="y4t-S4-eww" firstAttribute="top" secondItem="4xr-0v-Sjc" secondAttribute="bottom" constant="50" id="pWV-Sh-Pem"/>
+                            <constraint firstItem="SR0-hU-vQu" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qwD-bB-mkl"/>
+                            <constraint firstItem="WYB-dh-fwP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="zpZ-td-YzH"/>
+                        </constraints>
                     </view>
                     <connections>
-                        <outlet property="playPauseButton" destination="rLy-GR-stm" id="C6p-dt-eIH"/>
-                        <outlet property="progerssSlider" destination="aDW-nI-7dh" id="CLV-CF-0JC"/>
-                        <outlet property="timeLabel" destination="Qg8-RA-74Q" id="CZX-Vy-zcl"/>
+                        <outlet property="playPauseButton" destination="y4t-S4-eww" id="e8Y-xo-YvS"/>
+                        <outlet property="progerssSlider" destination="SR0-hU-vQu" id="J0g-Vc-hPU"/>
+                        <outlet property="timeLabel" destination="WYB-dh-fwP" id="33P-ar-A77"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -64,9 +77,6 @@
         <image name="button_play" width="187" height="189"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemIndigoColor">
-            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemPinkColor">
             <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
